# umbrella

./: .gitignore  README.md  pyproject.toml  references.md  requirements.txt
evaluation/: dataset.py  report.py  runner.py  schema.py
evaluation/metrics/: correctness.py  ragas_metrics.py  reranker_hitrate.py  routing_accuracy.py
evaluation/scripts/: run_eval.py
scripts/: evaluate.py  ingest.py  migrate.py  patch_ragas.py  reembed_fixed_summaries.py
src/umbrella_rag/: __init__.py  config.py  types.py
src/umbrella_rag/api/: __init__.py  app.py
src/umbrella_rag/db/: pgvector_client.py
src/umbrella_rag/embeddings/: encoder.py
src/umbrella_rag/generation/: __init__.py  generator.py
src/umbrella_rag/ingestion/: __init__.py  chunker.py  chunker.py.bak  parser.py  pipeline.py
src/umbrella_rag/pipeline/: __init__.py  orchestrator.py
src/umbrella_rag/retrieval/: classifier.py  expander.py  reranker.py  retriever.py
ui/: app.py
