[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "umbrella-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
	"fastapi==0.136.1",
	"uvicorn==0.47.0",
	"pydantic==2.13.4",
	"starlette==1.0.0",
	"groq==1.2.0",
	"sentence-transformers==5.5.0",
	"torch==2.5.1+cu121",
	"psycopg2-binary==2.9.12",
	"pgvector==0.4.2",
	"python-dotenv==1.2.2",
	"PyMuPDF==1.27.2.3",
	"httpx==0.28.1",
	"requests==2.34.2",
	"numpy==2.4.5",
]

[tool.setuptools.packages.find]
where = ["src"]
